syntax = "proto3";

package pb;

import "google/api/annotations.proto";
import "login/rpc_login.proto";

option go_package = "github.com/Streamfair/streamfair_idp/pb";

service IdentityProvider {
// Login attempts to authenticate a user and returns a token if successful.
rpc LoginUser(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
        post: "/v1/login_user"
        body: "*"
    };
}
}