syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Streamfair/streamfair_idp/pb/login";

// LoginRequest represents the data required for a user to attempt login.
message LoginRequest {
  string username =  1;
  string password =  2;
}

// LoginResponse contains the result of a login attempt.
message LoginResponse {
  // The status of the login attempt.
  enum Status {
    UNKNOWN =  0;
    SUCCESS =  1;
    FAILURE =  2;
  }
  // The status of the login attempt.
  Status status =  1;
  // An optional error message if the login failed.
  string error_message =  2;
  string access_token = 3;
  string refresh_token = 4;
  google.protobuf.Timestamp access_token_expires_at = 5;
  google.protobuf.Timestamp refresh_token_expires_at = 6;
}
